--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
 	margin: 0;
-	padding: 0;
+	/* padding: 0; */
 	border: 0;
 	font-size: 100%;
 	font: inherit;
@@ -148,7 +148,7 @@ input, select, textarea {
 
 	h3 {
 		font-size: 1.35em;
-		margin-top: 2em;
+		/* margin-top: 2em; */
 	}
 
 	b, strong {
